--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 h2{
     background-color: aqua;
+    font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
